--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <script src="https://unpkg.com/vue"></script>
   <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
 
-  <link rel="stylesheet" href="/css/grid.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <h1 style="color: white;text-align:center;padding-top:50px;">NFT Quest</h1>
@@ -35,7 +35,7 @@
             <div style="color: black; min-height: 200px;" >
               <div  v-if="player.class">
                 <div class="glow" style="display:inline-block;">
-                  <img :src="`/gfx/player/${player.class.replace(/ /g, '').toLowerCase()}.png`" class="charSprite" :style="{
+                  <img :src="`gfx/player/${player.class.replace(/ /g, '').toLowerCase()}.png`" class="charSprite" :style="{
                     filter: `hue-rotate(${player.hue}deg)`,
                   }">
                 </div>
@@ -96,14 +96,14 @@
       </div>
     </div>
     <div id="sword" class="nftglow" :class="{show: swordVisible}">
-      <img src="/gfx/sword.png" alt="">
+      <img src="gfx/sword.png" alt="">
     </div>
     <div id="player" ref="pd" v-if="player.class" :style="{
       top: `${player.y}px`,
       left: `${player.x}px`,
       zIndex: player.y
     }">
-      <img :src="`/gfx/player/${player.class.replace(/ /g, '').toLowerCase()}.png`" :style="{
+      <img :src="`gfx/player/${player.class.replace(/ /g, '').toLowerCase()}.png`" :style="{
         filter: `hue-rotate(${player.hue}deg)`,
         top: `${player.sy}px`,
         left: `${player.sx}px`
@@ -114,7 +114,7 @@
       left: `${mcf.x}px`,
       zIndex: mcf.y
     }">
-      <img :src="`/gfx/player/monk.png`" :style="{
+      <img :src="`gfx/player/monk.png`" :style="{
         top: `${mcf.sy}px`,
         left: `${mcf.sx}px`
       }">
@@ -124,7 +124,7 @@
       left: `${villager.x}px`,
       zIndex: villager.y
     }">
-      <img :src="`/gfx/player/villager.png`" :style="{
+      <img :src="`gfx/player/villager.png`" :style="{
         top: `${villager.sy}px`,
         left: `${villager.sx}px`
       }">
@@ -148,7 +148,7 @@
 
         <div v-if="player.class" :style="{
         }">
-          <img :src="`/gfx/player/${player.class.replace(/ /g, '').toLowerCase()}.png`" :style="{
+          <img :src="`gfx/player/${player.class.replace(/ /g, '').toLowerCase()}.png`" :style="{
             filter: `hue-rotate(${player.hue}deg)`,
             height: '128px',
             width: '128px'
@@ -180,6 +180,6 @@
     </dialog>
   </div>
 
-  <script src="/js/main.js" charset="utf-8"></script>
+  <script src="js/main.js" charset="utf-8"></script>
 </body>
 </html>
