--- a/index.html
+++ b/index.html
@@ -160,15 +160,14 @@
           <br>for playing this presentation.<br>To know more about NFTs, <a href="https://duckduckgo.com/?q=non+fungible+token" target="_blank">click here</a>.</p>
         <br><br>
         NFT QUEST was developed for<br> the
-        <a href="https://gitcoin.co/issue/metacartel/untitled-hackathon/6/100023901">
+        <a  target="_blank" href="https://gitcoin.co/issue/metacartel/untitled-hackathon/6/100023901">
           Untitled NFT Hackathon
         </a>
         <br><br>
         <menu class="dialog-menu">
-          <a href="https://dkojima.github.io/nftquest">
-          <button class="nes-btn">
+          <a target="_blank" href="https://dkojima.github.io/nftquest">
+            check the source
             <i class="nes-icon github is-medium"></i>
-            check the source</button>
           </a>
           <!-- <button class="nes-btn is-primary">Confirm</button> -->
         </menu>
