--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NFT</title>
+  <title>NFT Quest</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
   <script src="https://unpkg.com/vue"></script>
   <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
@@ -173,7 +173,7 @@
         </menu>
 
         <div style="color: gray; font-size: 10px;text-align:center;">
-          Sprites from <a href="http://pousse.rapiere.free.fr/tome/#">TomeTik</a>
+          Sprites from <a href="http://pousse.rapiere.free.fr/tome/#" target="_blank">TomeTik</a>
         </div>
       </form>
     </dialog>
