--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1 style="color: white;text-align:center;padding-top:50px;">NFT Quest</h1>
+  <a href="https://dkojima.github.io/nftquest" target="_blank">
+    <h1 style="color: white;text-align:center;padding-top:50px;">NFT Quest</h1>
+  </a>
+
   <div id="app">
     <div id="charSelectScreen" ref="charSelectScreen">
       <div class="nes-field is-inline">
