--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <a href="https://dkojima.github.io/nftquest" target="_blank">
+  <a href="https://github.com/dkojima/nftquest" target="_blank">
     <h1 style="color: white;text-align:center;padding-top:50px;">NFT Quest</h1>
   </a>
 
@@ -168,7 +168,7 @@
         </a>
         <br><br>
         <menu class="dialog-menu">
-          <a target="_blank" href="https://dkojima.github.io/nftquest">
+          <a target="_blank" href="https://github.com/dkojima/nftquest">
             check the source
             <i class="nes-icon github is-medium"></i>
           </a>
