final final final

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <a href="https://github.com/dkojima/nftquest" target="_blank">
     <h1 style="color: white;text-align:center;padding-top:50px;">NFT Quest</h1>
   </a>
+  <div style="color: white;text-align:center;font-size: 12px;">
+    An interactive presentation on Non-fungible tokens<br>and ownership of digital assets in the form of a retro RPG.
+  </div>
 
   <div id="app">
     <div id="charSelectScreen" ref="charSelectScreen">
