fixed vue include 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>NFT Quest</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-  <script src="https://unpkg.com/vue@2.7.10/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue@2.7.10/dist/vue.min.js"></script>
   <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
 
   <link rel="stylesheet" href="css/grid.css">
